[gd_scene load_steps=8 format=3 uid="uid://c8rkho7os22se"]

[ext_resource type="Script" path="res://control.gd" id="1_gqom2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nf8ng"]
bg_color = Color(0.922132, 0.262298, 0.222715, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6u8jh"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fso34"]
bg_color = Color(0.596622, 0.223941, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ovwq4"]
bg_color = Color(0.142995, 0.726023, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ayst"]
bg_color = Color(0.401732, 1, 0.164296, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1xfx3"]
bg_color = Color(0.763625, 0.563181, 0.282005, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gqom2")

[node name="Failure" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nf8ng")

[node name="RichTextLabel2" type="RichTextLabel" parent="Failure"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -492.0
offset_top = -65.0
offset_right = 492.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 90
theme_override_styles/background = SubResource("StyleBoxFlat_6u8jh")
text = "No controller detected"

[node name="SteamDeck" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fso34")

[node name="RichTextLabel3" type="RichTextLabel" parent="SteamDeck"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -461.0
offset_top = -65.0
offset_right = 461.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 90
theme_override_styles/background = SubResource("StyleBoxFlat_6u8jh")
text = "Steam Deck detected"

[node name="InputIdentity" type="RichTextLabel" parent="SteamDeck"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = 76.0
offset_right = 574.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
theme_override_styles/background = SubResource("StyleBoxFlat_6u8jh")
text = "-"

[node name="SteamOther" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fso34")

[node name="RichTextLabel3" type="RichTextLabel" parent="SteamOther"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -575.0
offset_top = -65.0
offset_right = 575.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 90
theme_override_styles/background = SubResource("StyleBoxFlat_6u8jh")
text = "Steam Controller detected"

[node name="InputIdentity" type="RichTextLabel" parent="SteamOther"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = 76.0
offset_right = 574.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
theme_override_styles/background = SubResource("StyleBoxFlat_6u8jh")
text = "-"

[node name="Playstation" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ovwq4")

[node name="RichTextLabel2" type="RichTextLabel" parent="Playstation"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -485.0
offset_top = -65.0
offset_right = 485.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 90
theme_override_styles/background = SubResource("StyleBoxFlat_6u8jh")
text = "PS controller detected"

[node name="InputIdentity" type="RichTextLabel" parent="Playstation"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = 76.0
offset_right = 574.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
theme_override_styles/background = SubResource("StyleBoxFlat_6u8jh")
text = "-"

[node name="Xbox" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3ayst")

[node name="RichTextLabel" type="RichTextLabel" parent="Xbox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -65.0
offset_right = 540.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 90
theme_override_styles/background = SubResource("StyleBoxFlat_6u8jh")
text = "Xbox controller detected"

[node name="InputIdentity" type="RichTextLabel" parent="Xbox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = 76.0
offset_right = 574.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
theme_override_styles/background = SubResource("StyleBoxFlat_6u8jh")
text = "-"

[node name="Other" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1xfx3")

[node name="RichTextLabel" type="RichTextLabel" parent="Other"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -445.0
offset_top = -65.0
offset_right = 445.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 90
theme_override_styles/background = SubResource("StyleBoxFlat_6u8jh")
text = "Unknown Controller"

[node name="InputIdentity" type="RichTextLabel" parent="Other"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = 76.0
offset_right = 574.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
theme_override_styles/background = SubResource("StyleBoxFlat_6u8jh")
text = "-"
